--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/app/styles.css">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎵</text></svg>">
 </head>
 <body>
     <div id="app">
@@ -228,7 +229,7 @@
         <div id="toast-container" class="toast-container"></div>
     </div>
 
-    <script src="config.js"></script>
-    <script src="app.js"></script>
+    <script src="/app/config.js"></script>
+    <script src="/app/app.js"></script>
 </body>
 </html>
