--- a/frontend/index.html
+++ b/frontend/index.html
@@ -184,7 +184,11 @@
                 <!-- Users View -->
                 <div id="users-view" class="view">
                     <div class="view-header">
-                        <h2>👥 Użytkownicy</h2>
+                        <h2>👥 Zarządzanie użytkownikami</h2>
+                        <button id="add-user-btn" class="btn btn-primary">+ Dodaj użytkownika</button>
+                    </div>
+                    <div class="users-info-box">
+                        <p>💡 <strong>Uprawnienia:</strong> Właściciel może zarządzać wszystkimi użytkownikami. Manager może dodawać i edytować tylko pracowników.</p>
                     </div>
                     <div id="users-list" class="card-list"></div>
                 </div>
