--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,10 @@
                     <h1 class="app-title">🎵 Music Venue</h1>
                 </div>
                 <div class="header-right">
+                    <button id="pm-toggle" class="chat-btn" onclick="showPrivateMessagesPanel()" title="Prywatne wiadomości" style="position: relative;">
+                        📩
+                        <span id="private-badge" class="badge hidden">0</span>
+                    </button>
                     <button id="chat-toggle" class="chat-btn" title="Czat zespołu">
                         💬
                         <span id="chat-badge" class="badge hidden">0</span>
